[package]
name = "aperture-position-nft"
version = "0.2.0"
authors = ["Aperture Finance"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = { version = "0.9.1" }
cw721-base = { version = "0.9.2", features = ["library"]}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
aperture-common = { version = "0.2.0", path = "../../packages/aperture_common" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }
