[package]
name = "solana_contracts"
version = "0.1.0"
authors = ["Aperture Finance <dezhi@aperture.finance>"]
description = "Rust program for pdn strategy"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"